--- a/ImpeCustomers/Views/Shared/_SearchPartial.cshtml
+++ b/ImpeCustomers/Views/Shared/_SearchPartial.cshtml
@@ -1,6 +1,10 @@
 ﻿<div class="navbar-form navbar-right">
     <div class="form-group">
-        <input type="text" class="form-control search" placeholder="Search">
+        <input type="text" id="search-input" class="form-control search" placeholder="Search">
     </div>
     <i class="glyphicon glyphicon-search"></i>
 </div>
+
+
+
+   
