--- a/ImpeCustomers/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/ImpeCustomers/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,5 +1,6 @@
 ﻿@model ImpeCustomers.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
+@using ImpeCustomers.Services
 
 <h4>Use another service to log in.</h4>
 <hr />
@@ -18,8 +19,21 @@
             @Html.AntiForgeryToken()
             <div id="socialLoginList">
                 <p>
-                    @foreach (AuthenticationDescription p in loginProviders) {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                    @foreach (AuthenticationDescription p in loginProviders)
+                    {
+                        string imgUrl = ExternalLoginUtilities.GetImgUrlByName(p.AuthenticationType);
+
+
+                        <button type="submit" class="external-login-submit-button" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">
+                            @if (!string.IsNullOrEmpty(imgUrl))
+                            {
+                                <img src="@imgUrl" class="external-logo" alt="@p.AuthenticationType" />
+                            }
+                            else
+                            {
+                                 @p.AuthenticationType
+                            }
+                        </button>
                     }
                 </p>
             </div>
