--- a/ImpeCustomers/Views/Shared/_Layout.cshtml
+++ b/ImpeCustomers/Views/Shared/_Layout.cshtml
@@ -41,7 +41,8 @@
         <div class="container">
             <div class="navbar-header">
                 <div class="logo">
-                    <img src="~/Images/incapsula-logo.png" />
+                    <a href="/"><img src="~/Images/incapsula-logo.png" /></a>
+                    
                 </div>
             </div>
         </div>
