--- a/ImpeCustomers/Views/Shared/_Layout.cshtml
+++ b/ImpeCustomers/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     <div class="navbar navbar-inverse navbar-static-top navbar-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-top .navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -37,14 +37,20 @@
             </div>
         </div>
     </div>
-    <div class="navbar">
+    <div class="navbar main-navbar">
         <div class="container">
             <div class="navbar-header">
+                <button type="button" class="navbar-toggle" style="border-color:forestgreen" data-toggle="collapse" data-target=".main-navbar .navbar-collapse">
+                    <span class="icon-bar" style="background-color:forestgreen"></span>
+                    <span class="icon-bar" style="background-color:forestgreen"></span>
+                    <span class="icon-bar" style="background-color:forestgreen"></span>
+                </button>
                 <div class="logo">
                     <a href="/"><img src="~/Images/incapsula-logo.png" /></a>
                     
                 </div>
             </div>
+            @Html.Partial("_NavigationPartial")
         </div>
     </div>
     <div class="container body-content">
