--- a/ImpeCustomers/Views/Home/Profile.cshtml
+++ b/ImpeCustomers/Views/Home/Profile.cshtml
@@ -7,7 +7,16 @@
 
 
 <div class="row">
-    <h4>@Html.ValueFor(m => m.ContactUser.UserName) Account Profile</h4>
+    <h3>Account Profile</h3>
+</div>
+
+<div class="row">
+    <div class="form-group">
+        @Html.LabelFor(m => m.ContactUser.UserName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.ValueFor(m => m.ContactUser.UserName)
+        </div>
+    </div>
 </div>
 <div class="row">
     <div class="form-group">
@@ -34,8 +43,16 @@
     </div>
 </div>
 
-    <div class="row">
-    <h4>Company @Html.ValueFor(m => m.CompanyName)</h4>
+<div class="row">
+    <h3>Company Profile</h3>
+</div>
+<div class="row">
+    <div class="form-group">
+        @Html.LabelFor(m => m.CompanyName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.ValueFor(m => m.CompanyName)
+        </div>
+    </div>
 </div>
 <div class="row">
     <div class="form-group">
@@ -45,15 +62,15 @@
         </div>
     </div>
 </div>
-    <div class="row">
-        <div class="form-group">
-            @Html.LabelFor(m => m.State, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.ValueFor(m => m.State)
-            </div>
+<div class="row">
+    <div class="form-group">
+        @Html.LabelFor(m => m.State, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.ValueFor(m => m.State)
         </div>
     </div>
-    <div class="row">
+</div>
+<div class="row">
     <div class="form-group">
         @Html.LabelFor(m => m.City, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -77,12 +94,21 @@
         </div>
     </div>
 </div>
-    <div class="row">
+<div class="row">
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.Comments, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.ValueFor(m => m.Comments)
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Comments, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.ValueFor(m => m.Comments)
         </div>
     </div>
+</div>
+<div class="row">
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.TimeCreated, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.ValueFor(m => m.TimeCreated)
+        </div>
+    </div>
+</div>
